# ElectronEfficiency

./: .travis.yml  CMakeLists.txt  README.md
.travis-ci.d/: compile_and_test.sh  init_x86_64.sh
EfficiencyFiles/: OBC1000_FourCut_Full_50k_4_40BX.root  OBC1000_TwoFourCut_Full_50k_4_40BX.root  OBC1100_FourCut_Full_50k_4_40BX.root  OBC1100_TwoFourCut_Full_50k_4_40BX.root  OBC1200_FourCut_Full_50k_4_40BX.root  OBC1200_TwoFourCut_Full_50k_4_40BX.root  OBC1300_FourCut_Full_50k_4_40BX.root  OBC1300_TwoFourCut_Full_50k_4_40BX.root  OBC1400_FourCut_Full_50k_4_40BX.root  OBC1400_TwoFourCut_Full_50k_4_40BX.root  OBC1500_FourCut_Full_50k_4_40BX.root  OBC1500_TwoFourCut_Full_50k_4_40BX.root  OBC500_FourCut_Full_50k_4_40BX.root  OBC500_TwoFourCut_Full_50k_4_40BX.root  OBC600_FourCut_Full_50k_4_40BX.root  OBC600_TwoFourCut_Full_50k_4_40BX.root  OBC700_FourCut_Full_50k_4_40BX.root  OBC700_TwoFourCut_Full_50k_4_40BX.root  OBC800_FourCut_Full_50k_4_40BX.root  OBC800_TwoFourCut_Full_50k_4_40BX.root  OBC900_FourCut_Full_50k_4_40BX.root  OBC900_TwoFourCut_Full_50k_4_40BX.root
include/: TagProbability.hh
src/: CMakeLists.txt  TagProbability.cpp  Test.cpp
