CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( ElectronEfficiency )

SET( PROJECT_VERSION_MAJOR 0 )
SET( PROJECT_VERSION_MINOR 1 )

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

SET( CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR} )
SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -W -Wconversion -Wextra -Wshadow -Weffc++ -pedantic -Wno-long-long -Wuninitialized -ggdb" )

FOREACH( pkg ROOT )
  FIND_PACKAGE( ${pkg} REQUIRED )
  INCLUDE_DIRECTORIES ( SYSTEM ${${pkg}_INCLUDE_DIR} )
  LINK_LIBRARIES( ${${pkg}_LIBRARIES} )
  ADD_DEFINITIONS( ${${pkg}_DEFINITIONS} )
ENDFOREACH()
INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/include )

ADD_SUBDIRECTORY ( ${PROJECT_SOURCE_DIR}/src )


MESSAGE (STATUS "*** Build Mode ${CMAKE_BUILD_TYPE} ***" )
MESSAGE (STATUS "*** Compiler Flags:        ${CMAKE_CXX_FLAGS}"  )
MESSAGE (STATUS "*** Compiler Flags DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}"  )
