CMAKE_MINIMUM_REQUIRED( VERSION 3.4 )

PROJECT( ElectronEfficiency )

SET( PROJECT_VERSION_MAJOR 0 )
SET( PROJECT_VERSION_MINOR 1 )

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

SET( CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR} )

INCLUDE(CheckCXXCompilerFlag)

SET ( COMPILER_FLAGS -O3 -Wall -W -Wconversion -Wextra -Wshadow -Weffc++ -pedantic -Wno-long-long -Wuninitialized )

IF( NOT APPLE )
 LIST( APPEND COMPILER_FLAGS -Wl,-no-undefined )
ENDIF()

MESSAGE( STATUS "FLAGS ${COMPILER_FLAGS}" )
FOREACH( FLAG ${COMPILER_FLAGS} )
  CHECK_CXX_COMPILER_FLAG( "${FLAG}" CXX_FLAG_WORKS_${FLAG} )
  IF( ${CXX_FLAG_WORKS_${FLAG}} )
    MESSAGE ( STATUS "Adding ${FLAG} to CXX_FLAGS" )
    ### We prepend the flag, so they are overwritten by whatever the user sets in his own configuration
    SET ( CMAKE_CXX_FLAGS "${FLAG} ${CMAKE_CXX_FLAGS}")
  ELSE()
    MESSAGE ( STATUS "NOT Adding ${FLAG} to CXX_FLAGS" )
  ENDIF()
ENDFOREACH()

OPTION( USE_CXX11 "Use CXX Standard 2011" True )
IF( USE_CXX11 )
  SET( FLAG "-std=c++11" )
  CHECK_CXX_COMPILER_FLAG( ${FLAG} CXX_FLAG_WORKS_${FLAG} )
  IF( ${CXX_FLAG_WORKS_${FLAG}} )
    SET( CMAKE_CXX_FLAGS "${FLAG} ${CMAKE_CXX_FLAGS}")
  ELSE()
    MESSAGE( FATAL_ERROR "Cannot add ${FLAG} to CMAKE_CXX_FLAGS, but c++11 was requested, check your compiler" )
  ENDIF()
ELSE()
  MESSAGE( STATUS "NOT building with CXX11 standard" )
ENDIF()

IF( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.9 )
  SET( CMAKE_CXX_FLAGS "-fdiagnostics-color=auto ${CMAKE_CXX_FLAGS}" )
ENDIF()



FOREACH( pkg ROOT )
  FIND_PACKAGE( ${pkg} REQUIRED )
  INCLUDE_DIRECTORIES ( SYSTEM ${${pkg}_INCLUDE_DIR} )
  LINK_LIBRARIES( ${${pkg}_LIBRARIES} )
  ADD_DEFINITIONS( ${${pkg}_DEFINITIONS} )
ENDFOREACH()

IF( ${ROOTVERSION} VERSION_GREATER 6 )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
ENDIF()

INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/include )

ADD_SUBDIRECTORY ( ${PROJECT_SOURCE_DIR}/src )


MESSAGE (STATUS "*** Build Mode ${CMAKE_BUILD_TYPE} ***" )
MESSAGE (STATUS "*** Compiler Flags:        ${CMAKE_CXX_FLAGS}"  )
MESSAGE (STATUS "*** Compiler Flags DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}"  )
